Modify: Learning assistance

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "uvicorn": "^0.0.1-security"
   }
 }
